--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Bam4d <chrisbam4d@gmail.com>"]
 python = "^3.8"
 ray = {extras = ["rllib"], version = "^2.1.0"}
 griddly = "^1.5.1"
-torch = "^1.13.0"
+torch = "1.12.1"
 protobuf = "3.20.*"
 wandb = "^0.13.5"
 
